# dioxus-terminal

./: .gitignore  .tarpaulin.toml  CLAUDE.md  Cargo.toml  README.md
.claude/: RULES.md
.claude/commands/: check.md  coverage.md  lint.md
doc/: testing.md
src/: error.rs  lib.rs  pty.rs  term.rs  widget.rs
