[package]
name = "dioxus-terminal"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Terminal emulator widget for Dioxus using alacritty_terminal and portable-pty"
repository = "https://github.com/aladac/dioxus-terminal"
keywords = ["dioxus", "terminal", "pty", "alacritty", "gui"]
categories = ["gui", "command-line-interface"]

[dependencies]
alacritty_terminal = "0.25"
portable-pty = "0.9"
vte = "0.15"
dioxus = { version = "0.7", features = ["desktop"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
dioxus-ssr = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
all = "warn"
pedantic = "warn"
